# deep-tracking

./: .gitignore  .weightedBCECriterion.py.swp  CMakeLists.txt  README.md  affine_transformer_test.py  dataloader.py  model.py  package.xml  train.py  utils.py  weightedBCECriterion.py
launch/: deeptracking.launch
src/: affine_transformer_test.py  dataloader.py  deep_tracker.py  model.py  utils.py
